# opencv_ocl

./: CMakeLists.txt
include/: cvconfig.h  opencl_kernels.hpp
include/opencv2/ocl/: ocl.hpp
include/opencv2/ocl/private/: util.hpp
samples/: pyrlk_optical_flow.cpp  sample_optical_flow.cpp  sample_squares.cpp  sample_stereo_match.cpp  sample_surf_matcher.cpp  sample_tvl1_optical_flow.cpp  stereo_match.cpp  test_optical_flow.cpp  utility.h
src/: arithm.cpp  cl_context.cpp  filtering.cpp  gftt.cpp  imgproc.cpp  kmeans.cpp  matrix_operations.cpp  precomp.hpp  stereo_csbp.cpp
